fix layout bugs

--- a/_src/sass/blocks/_header-menu.scss
+++ b/_src/sass/blocks/_header-menu.scss
@@ -47,7 +47,7 @@
 
     @media (min-width: $screen-xl) {
       flex-direction: row;
-      gap: 20px;
+      gap: 14px;
       margin-bottom: 0;
     }
 
